--- a/package.json
+++ b/package.json
@@ -95,12 +95,14 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fs": "^0.0.2",
     "husky": "^7.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "lint-staged": "^11.1.2",
     "next-redux-wrapper": "^7.0.4",
     "normalize.css": "^8.0.1",
     "prettier": "^2.3.2",
+    "react-device-detect": "^2.2.2",
     "react-select": "^5.4.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -108,8 +110,7 @@
     "sass-loader": "^13.0.2",
     "slick-carousel": "^1.8.1",
     "ts-jest": "^29.0.3",
-    "typescript": "4.8.3",
-    "identity-obj-proxy": "^3.0.0"
+    "typescript": "4.8.3"
   },
   "dependencies": {
     "lodash.throttle": "^4.1.1",
@@ -121,6 +122,7 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.4",
     "redux": "^4.1.1",
+    "swiper": "^8.4.3",
     "webpack": "^5.53.0"
   }
 }
