--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 NEXT_PUBLIC_APP_URL="http://del/"
-NEXT_PUBLIC_SM=1024
-NEXT_PUBLIC_MD=1280
-NEXT_PUBLIC_LG=1366
-NEXT_PUBLIC_XL=1600
+NEXT_PUBLIC_PHONE='+7(495)223-01-88'
+NEXT_PUBLIC_EMAIL='info@veza.ru'
+
