--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 NEXT_PUBLIC_APP_URL="http://del/"
 NEXT_PUBLIC_PHONE='+7(495)223-01-88'
 NEXT_PUBLIC_EMAIL='info@veza.ru'
+NEXT_PUBLIC_VK='https://vk.com/veza_official'
+NEXT_PUBLIC_YOUTUBE='https://www.youtube.com/channel/UCsNlnQ7uhAc_cOgHJPYMnRQ'
+NEXT_PUBLIC_TELEGA='https://t.me/+Rp5WaWL-69kh4XhQ'
+NEXT_PUBLIC_DESCRIPTION='Российское предприятие ООО "ВЕЗА" создано в 1995 году. Основное направление деятельности: разработка, изготовление и реализация вентиляционного оборудования и климатической техники.'
+NEXT_PUBLIC_KEYWORD='вентиляционное оборудование, климатическая техника'
+NEXT_PUBLIC_TITLE='"Веза"- вентиляционное оборудование, климатическая техника'
 
