--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
+    "react-dadata": "^2.23.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.2.10",
     "react-redux": "^8.0.4",
