--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "format": "prettier --write ./**/*.{js,jsx,ts,tsx}",
     "prepare": "husky install"
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -41,7 +40,6 @@
       "last 3 version",
       "not op_mini all"
     ],
-
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -122,6 +120,7 @@
     "react-dadata": "^2.23.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.2.10",
+    "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.4",
