--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "format": "prettier --write ./**/*.{js,jsx,ts,tsx}",
     "prepare": "husky install"
   },
-
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -41,7 +40,6 @@
       "last 3 version",
       "not op_mini all"
     ],
-
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -113,7 +111,8 @@
     "slick-carousel": "^1.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-player": "^2.11.0"
   },
   "dependencies": {
     "lodash.throttle": "^4.1.1",
