--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "normalize.css": "^8.0.1",
     "prettier": "^2.3.2",
     "react-device-detect": "^2.2.2",
+    "react-fancybox": "^1.0.2",
     "react-select": "^5.5.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -114,12 +115,12 @@
     "yup": "^0.32.11"
   },
   "dependencies": {
+    "@fancyapps/ui": "^4.0.31",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dadata": "^2.23.0",
     "react-dom": "^18.2.0",
-    "react-image-gallery": "^1.2.10",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
     "react-slick": "^0.29.0",
