--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "yup": "^0.32.11"
   },
   "dependencies": {
+    "@pbe/react-yandex-maps": "1.1.8",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
