--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,87 @@
-version: '3' #This denotes that we are using version 3 of Docker Compose
-services: #This section defines all the different containers we will create.
-  nextjs: #This is the name of our Nextjs application.
-    command: start
-    build: #This specifies the location of our Dockerfile
-      context: . #This specifies the location of our Dockerfile
-    ports: #This is used to map the container’s ports to the host machine.
+version: "3.9"
+services:
+  nextjs:
+    build:
+      context: .
+    ports:
       - "3000:3000"
+    command: start
+    networks:
+      - veza
   nginx:
-    # container_name: nginx
     build:
       context: ./deploy/.nginx/
-    ports: #This is used to map the container’s ports to the host machine.
+    ports:
       - "80:80"
     links:
       - nextjs
     restart: always
+    networks:
+      - veza
+  postgres:
+    image: postgres:latest
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=50"
+      - "-c"
+      - "shared_buffers=1GB"
+      - "-c"
+      - "effective_cache_size=4GB"
+      - "-c"
+      - "work_mem=16MB"
+      - "-c"
+      - "maintenance_work_mem=512MB"
+      - "-c"
+      - "random_page_cost=1.1"
+      - "-c"
+      - "temp_file_limit=10GB"
+      - "-c"
+      - "log_min_duration_statement=200ms"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10s"
+      - "-c"
+      - "lock_timeout=1s"
+      - "-c"
+      - "statement_timeout=60s"
+      - "-c"
+      - "shared_preload_libraries=pg_stat_statements"
+      - "-c"
+      - "pg_stat_statements.max=10000"
+      - "-c"
+      - "pg_stat_statements.track=all"
+    environment:
+      POSTGRES_DB: "veza"
+      POSTGRES_USER: "veza_user"
+      POSTGRES_PASSWORD: "veza_user"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - ../2. Init Database:/docker-entrypoint-initdb.d
+      - .:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    networks:
+      - veza
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4:6.15
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "rybolov@veza.ru"
+      PGADMIN_DEFAULT_PASSWORD: "veza_user"
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+    volumes:
+      - ./pgadmin:/var/lib/pgadmin
+    ports:
+      - "5050:80"
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1G
+    networks:
+      - veza
+
+networks:
+  veza:
+    driver: bridge
