--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
-      "features/*": ["./features/*"]
+      "features/*": ["./features/*"],
+      "store/*": ["./store/*"]
     }
   },
   "include": [
