--- a/package.json
+++ b/package.json
@@ -109,14 +109,14 @@
     "sass-loader": "^13.0.2",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "@pbe/react-yandex-maps": "1.1.8",
+    "react-dadata": "^2.23.0"
   },
   "dependencies": {
-    "@pbe/react-yandex-maps": "1.1.8",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dadata": "^2.23.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
