--- a/deploy/.nginx/default.conf
+++ b/deploy/.nginx/default.conf
@@ -1,12 +1,24 @@
-
-worker_processes 4;
-
-events { worker_connections 1024; }
-
-http {
-    server {
+server {
     listen 80;
+    # your server_name for production
+    server_name localhost;
+  server_tokens off;
+    location / {
+        # default port, could be changed if you use next with custom server
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    ### For https
+    # location / {
+    #     return 301 https://$host$request_uri;
+    # }
 }
 
 # server {
