--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["next/core-web-vitals"],
+  "extends": ["eslint:recommended"],
   "env": {
     "browser": true,
     "node": true,
