--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
       "utils/*": ["./utils/*"],
       "components/*": ["./components/*"],
       "service/*": ["./service/*"]
+      "styles/*": ["./styles/*"]
     }
   },
   "include": [
