--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ NEXT_PUBLIC_YOUTUBE='https://www.youtube.com/channel/UCsNlnQ7uhAc_cOgHJPYMnRQ'
 NEXT_PUBLIC_TELEGA='https://t.me/+Rp5WaWL-69kh4XhQ'
 NEXT_PUBLIC_DESCRIPTION='Российское предприятие ООО "ВЕЗА" создано в 1995 году. Основное направление деятельности: разработка, изготовление и реализация вентиляционного оборудования и климатической техники.'
 NEXT_PUBLIC_KEYWORD='вентиляционное оборудование, климатическая техника'
-NEXT_PUBLIC_TITLE='"Веза"- вентиляционное оборудование, климатическая техника'
+NEXT_PUBLIC_TITLE='"Веза"- вентиляционное оборудование, климатическая техник'
 
