--- a/deploy/.nginx/default.conf
+++ b/deploy/.nginx/default.conf
@@ -11,6 +11,11 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        add_header   Access-Control-Allow-Origin "*" always;
+        add_header   Access-Control-Allow-Methods "GET, POST, PATCH, OPTIONS" always;
+        add_header   Access-Control-Allow-Headers "Content-Type" always;
+        add_header   Strict-Transport-Security "max-age=31536000" always;
+        add_header   X-Frame-Options deny;
     }
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
