--- a/deploy/.nginx/default.conf
+++ b/deploy/.nginx/default.conf
@@ -44,6 +44,10 @@ if ($request_method = 'OPTIONS') {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+    location /api {
+             proxy_pass frontend:3000;
+             proxy_set_header "Access-Control-Allow-Origin" "http://frontend:3000"
+         }
     ### For https
     # location / {
     #     return 301 https://$host$request_uri;
