--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_APP_URL="http://213.139.210.18/"
-NEXT_PUBLIC_APP_FETCH="http://213.139.210.18:5000/"
+NEXT_PUBLIC_APP_URL="http://213.139.210.18"
+NEXT_PUBLIC_APP_FETCH="http://213.139.210.18:5000"
 NEXT_PUBLIC_PHONE='+7(495)223-01-88'
 NEXT_PUBLIC_EMAIL='info@veza.ru'
 NEXT_PUBLIC_VK='https://vk.com/veza_official'
