--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.18.6",
+    "@pbe/react-yandex-maps": "1.1.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.1.1",
@@ -101,6 +102,7 @@
     "next-redux-wrapper": "^7.0.4",
     "normalize.css": "^8.0.1",
     "prettier": "^2.3.2",
+    "react-dadata": "^2.23.0",
     "react-device-detect": "^2.2.2",
     "react-select": "^5.5.8",
     "redux-devtools-extension": "^2.13.9",
@@ -109,11 +111,11 @@
     "sass-loader": "^13.0.2",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.3",
-    "yup": "^0.32.11",
-    "@pbe/react-yandex-maps": "1.1.8",
-    "react-dadata": "^2.23.0"
+    "yup": "^0.32.11"
   },
   "dependencies": {
+    "@jest/globals": "^29.3.1",
+    "@testing-library/dom": "^8.19.0",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
