--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
   "dependencies": {
     "@jest/globals": "^29.3.1",
     "@testing-library/dom": "^8.19.0",
+    "components": "^0.1.0",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
