--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_APP_URL="http://213.139.210.18"
+NEXT_PUBLIC_DADATA_TOKEN="492003ab7600971803436475e9254289aae46188"
 NEXT_PUBLIC_APP_URL_DEV="http://localhost:3000"
 NEXT_PUBLIC_APP_FETCH="http://213.139.210.18:5000"
 NEXT_PUBLIC_PHONE='+7(495)223-01-88'
