--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,10 +11,12 @@ services:
 cache:
   paths:
     - node_modules/
-
-test_async:
+npm_install:
   script:
     - npm install
+    
+test_lint:
+  script:
     - npm run lint
 
 
