--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,5 +30,5 @@ unit_test:
 
 deploy:
   script:
-    - npm git remote add origin 213.139.210.18/veza/front
+    - git remote add origin 213.139.210.18/veza/front
 
