--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ unit_test:
 deploy:
   script:
     - git remote -v
+    - git push -u prod master
     - git remote add prod 213.139.210.18/veza/front
 
 
