Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ deploy:
     - git remote -v
     - git branch
     - git init 
+    - git config pull.rebase true
     - git pull origin master
 
 
