--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,6 @@ deploy:
     - git remote -v
     - git branch
     - git config pull.rebase true
-    - git pull origin prod
+    - git pull origin master
 
 
