Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,6 @@ deploy:
     - git branch
     - git config pull.rebase true
     - git pull origin master
-    - git remote add pb ssh://root:pJ6gVGu^S(a2@213.139.210.18:/root/veza/front/.git
+    - git remote add pb ssh://root@213.139.210.18:/root/veza/front/.git
     - git remote -v
     - git remote show origin
