--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,4 +37,4 @@ deploy:
     - git pull origin master
     - git remote add pb ssh://root@213.139.210.18:/root/veza/front/.git
     - git remote -v
-    - git remote show origin
+    - git remote show pb
