--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,8 @@ deploy:
     - git branch
     - git config pull.rebase true
     - git pull origin master
-    - git remote add pb ssh://root@213.139.210.18:/root/veza/front/.git
+    - git remote remove pb
+    - git remote remove prod
+    - git remote add prod ssh://root@213.139.210.18:/root/veza/front/.git
     - git remote -v
-    - git remote show pb
+    - git remote show prod
