--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,12 @@
     "задаваемые",
     "Категория",
     "модели",
+    "Подробнее",
     "сертификатов",
-    "Сертификаты"
+    "Сертификаты",
+    "файла",
+    "homecategory",
+    "navigations",
+    "Swiper"
   ]
 }
