Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,9 @@ deploy:
     - git branch
     - git config pull.rebase true
     - git pull origin master
-    - git remote add pb ssh://root@213.139.210.18:/root/veza/front/.git
+    - git remote remove prod
+    - git remote remove pb
+    - git remote add prod ssh://root@213.139.210.18:/root/veza/front/.git
     - git remote -v
     - git remote show pb
 
