--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,28 @@
 image: node:latest
-only:
-  - master
+
+stages:
+  - install
+  - build
+  - test
+
 cache:
   paths:
     - node_modules/
 
-npm_install:
-  script:
-    - npm install
-    - npm install git
+install_dependencies:
+    stage: install
+    script:
+      - npm install
+      - npm install git
+    artifacts:
+      paths:
+        - node_modules/    
 
-project_build:
-  script:
-    - npm run build
+build:
+    stage: build
+    script:
+      - npm run buld
 
-test_lint:
-  script:
-    - npm run lint
-
-unit_test:
-  script:
-    - npm run test
-deploy:
-  script:
-    - git init 
-    - git config pull.rebase true
-    - git pull origin master
-    - git remote remove prod
-    - git remote remove pb
-    - git remote add prod ssh://root@213.139.210.18:/root/veza/front/.git
-    - git remote -v
-
+testing:
+    stage: test
+    script: npm run test        
