--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,37 @@
 image: node:latest
-
 stages:
-  - install
+  - preparation
   - build
   - test
+  - deploy
 
 cache:
   paths:
     - node_modules/
 
 install_dependencies:
-    stage: install
+    stage: preparation
     script:
       - npm install
       - npm install git
     artifacts:
       paths:
         - node_modules/    
+    only:
+      - master
 
 build:
   stage: build
   script:
-      - npm run buld
+    - npm run buld
+  only:
+    - master
+    
 
 testing:
   dependencies:
     - build
   stage: test
-  script: npm run test        
+  script: npm run test
+  only:
+    - master
