--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,8 @@ stages:
   - preparation
   - build
   - test
-  - deploy
+  - deploy staging
 
-cache:
-  paths:
-    - node_modules/
 
 install_dependencies:
     stage: preparation
@@ -16,14 +13,17 @@ install_dependencies:
       - npm install git
     artifacts:
       paths:
-        - node_modules/    
+        - /    
     only:
       - master
 
 build:
   stage: build
   script:
-    - npm run buld
+    - npm run build
+  artifacts:
+    paths:
+      - /     
   only:
     - master
     
