Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ install_dependencies:
       - npm install git
     artifacts:
       paths:
-        - /    
+        - node_modules/    
     only:
       - master
 
