Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,11 @@ stages:
   - test
   - deploy_staging
 
+
 install_dependencies:
     stage: preparation
+    only:
+      - master
     script:
       - npm install
       - npm install git
@@ -20,15 +23,21 @@ build:
     - npm run build
   artifacts:
     paths:
-      - /
+      - /     
+  only:
+    - master
 
 testing:
   dependencies:
     - build
   stage: test
   script: npm run test
+  only:
+    - master
 
 deploy_staging:
   stage: deploy_staging
+  only:
+    - master
   script:
     - echo "test" 
