--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
       "pre-commit": "lint-staged"
     }
   },
-
   "lint-staged": {
     "*.(ts|tsx|js|jsx)": [
       "eslint --fix",
@@ -121,6 +120,7 @@
     "components": "^0.1.0",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
