Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,11 +13,16 @@ install_dependencies:
       - npm install git
     tags:
       - stagin
+    artifacts:
+      paths:
+        - /     
 
 build:
   stage: build
   script:
     - npm run build
+  tags:
+    - stagin  
   artifacts:
     paths:
       - /     
