Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,9 @@ build:
   script:
     - npm install
     - npm run build
+  artifacts:
+    paths:
+      - /builds/web/front/
   tags:
     - stagin  
 
