Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ build:
   artifacts:
     paths:
       - /builds/web/front/
-  exclude:
-    - /builds/web/front/.git
+    exclude:
+      - /builds/web/front/.git/
   tags:
     - stagin  
 
