Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ prepare:
     exclude:
       - /builds/web/front/.git
       - /builds/web/front/.next
+      - /builds/web/front/front.tmp
   tags:
     - stagin  
     
