Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@ prepare:
   script:
     - npm install
     - npm run lint
+  artifacts:
+      paths:
+        - /builds/web/front/node_modules/
   tags:
     - stagin  
     
