--- a/package.json
+++ b/package.json
@@ -116,8 +116,10 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "@fancyapps/ui": "4.0.0-beta.3",
     "@jest/globals": "^29.3.1",
     "@testing-library/dom": "^8.19.0",
+    "@types/fancybox": "^3.5.3",
     "components": "^0.1.0",
     "lodash.throttle": "^4.1.1",
     "next": "^12.3.1",
