--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "react-spinners": "^0.13.4",
     "redux": "^4.1.1",
     "swiper": "^8.4.4",
-    "webpack": "^5.53.0"
+    "webpack": "^5.53.0",
+    "xlsx": "^0.18.5"
   }
 }
