--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ NEXT_PUBLIC_TELEGA='https://t.me/+Rp5WaWL-69kh4XhQ'
 NEXT_PUBLIC_DESCRIPTION='Российское предприятие ООО "ВЕЗА" создано в 1995 году. Основное направление деятельности: разработка, изготовление и реализация вентиляционного оборудования и климатической техники.'
 NEXT_PUBLIC_KEYWORD='вентиляционное оборудование, климатическая техника'
 NEXT_PUBLIC_TITLE='"Веза"- вентиляционное оборудование, климатическая техник'
+NEXT_PUBLIC_ADDRESS='Зелёный проспект, 20, Москва'
