--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
   "dependencies": {
     "@jest/globals": "^29.3.1",
     "@testing-library/dom": "^8.19.0",
+    "clsx": "^1.2.1",
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -126,7 +127,6 @@
     "react-spinners": "^0.13.4",
     "redux": "^4.1.1",
     "swiper": "^8.4.4",
-    "webpack": "^5.53.0",
-    "xlsx": "^0.18.5"
+    "webpack": "^5.53.0"
   }
 }
