--- a/package.json
+++ b/package.json
@@ -119,10 +119,10 @@
     "@jest/globals": "^29.3.1",
     "@react-pdf-viewer/core": "^3.11.0",
     "@react-pdf-viewer/default-layout": "^3.11.0",
+    "@react-pdf-viewer/locales": "^1.0.0",
     "@react-pdf-viewer/page-navigation": "^3.11.0",
     "@react-pdf-viewer/thumbnail": "^3.11.0",
     "@testing-library/dom": "^8.19.0",
-    "clsx": "^1.2.1",
     "next": "^12.3.1",
     "pdfjs-dist": "^3.2.146",
     "react": "^18.2.0",
