--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react-select": "^4.0.17",
     "@types/react-slick": "^0.23.5",
     "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "babel-eslint": "^10.1.0",
@@ -132,6 +133,7 @@
     "react-spinners": "^0.13.4",
     "redux": "^4.1.1",
     "swiper": "^8.4.4",
+    "uuid": "^9.0.0",
     "webpack": "^5.53.0"
   }
 }
