--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^4.0.17",
@@ -98,12 +99,14 @@
     "formik": "^2.2.9",
     "fs": "^0.0.2",
     "husky": "^7.0.1",
+    "i": "^0.3.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "lint-staged": "^11.1.2",
     "next-redux-wrapper": "^8.0.0",
     "normalize.css": "^8.0.1",
+    "npm": "^9.6.1",
     "prettier": "^2.8.1",
     "react-cookie": "^4.1.1",
     "react-dadata": "^2.23.0",
@@ -124,14 +127,19 @@
     "@react-pdf-viewer/page-navigation": "^3.11.0",
     "@react-pdf-viewer/thumbnail": "^3.11.0",
     "@testing-library/dom": "^8.19.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "next": "^12.3.1",
     "pdfjs-dist": "^3.2.146",
+    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
     "react-spinners": "^0.13.4",
     "redux": "^4.1.1",
+    "slate": "^0.91.4",
+    "slate-history": "^0.86.0",
+    "slate-react": "^0.91.10",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
     "webpack": "^5.53.0"
