--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@pbe/react-yandex-maps": "1.1.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/react": "^13.4.0",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^29.1.1",
     "@types/lodash.throttle": "^4.1.7",
     "@types/next-redux-wrapper": "^3.0.0",
@@ -128,11 +129,13 @@
     "@react-pdf-viewer/thumbnail": "^3.11.0",
     "@testing-library/dom": "^8.19.0",
     "@tinymce/tinymce-react": "^4.3.0",
+    "@types/react-helmet": "^6.1.6",
     "next": "^12.3.1",
     "pdfjs-dist": "^3.2.146",
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-player": "^2.11.0",
     "react-redux": "^8.0.4",
     "react-spinners": "^0.13.4",
